@@ -3,6 +3,8 @@ Post v22.12.0
   - ovn-controller: Experimental support for co-hosting multiple controller
     instances on the same host.
   - Add ovn-ctl commands for (re)starting/stopping OVSDB relay for OVN SB DB.
+  - Add new ovn-db@.service systemd unit to run ovsdb-servers in separate
+    systemd units.
 
 OVN v22.12.0 - 16 Dec 2022
 --------------------------
